@@ -2,16 +2,15 @@ package org.app.carsharingapp.service.impl;
 
 import jakarta.persistence.EntityNotFoundException;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.app.carsharingapp.dto.car.CarDto;
 import org.app.carsharingapp.entity.Car;
+import org.app.carsharingapp.exception.CarCreateException;
 import org.app.carsharingapp.mapper.CarMapper;
 import org.app.carsharingapp.repository.CarRepository;
 import org.app.carsharingapp.service.CarService;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 
 @Service
 @RequiredArgsConstructor
@@ -19,9 +18,11 @@ public class CarServiceImpl implements CarService {
     private final CarRepository carRepository;
     private final CarMapper carMapper;
 
-    @Transactional
     @Override
     public CarDto createCar(CarDto carDto) {
+        if (carDto.getInventory() < 1) {
+            throw new CarCreateException("Car inventory must be greater than 0");
+        }
         Car savedCar = carRepository.save(carMapper.toModel(carDto));
         return carMapper.toDto(savedCar);
     }
@@ -40,7 +41,7 @@ public class CarServiceImpl implements CarService {
     public List<CarDto> getAllCars(Pageable pageable) {
         return carRepository.findAll(pageable).stream()
                 .map(carMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
