@@ -4,7 +4,6 @@ import com.stripe.model.checkout.Session;
 import jakarta.persistence.EntityNotFoundException;
 import java.math.BigDecimal;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.app.carsharingapp.dto.payment.PaymentRequestDto;
 import org.app.carsharingapp.dto.payment.PaymentResponseDto;
@@ -31,7 +30,7 @@ public class PaymentServiceImpl implements PaymentService {
     public List<PaymentResponseDto> getPaymentsByCustomerId(Long customerId) {
         return paymentRepository.findAllByCustomerId(customerId).stream()
                 .map(paymentMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
